# universal-generalized-phinary

./: CMakeLists.txt
src/: CMakeLists.txt
src/apps/mixed-precision/tau/: CMakeLists.txt  main.cpp
src/number-systems/: README.md
src/number-systems/include/sw/universal/number/tau/: attributes.hpp  exceptions.hpp  manipulators.hpp  mathlib.hpp  numeric_limits.hpp  tau.hpp  tau_fwd.hpp  tau_impl.hpp  tau_traits.hpp
test/: CMakeLists.txt
test/src/: tau_tests.cpp
